# gdrive

./: .gitignore  Cargo.toml  client.example.json  demo.txt  go.mod
public/: error.html
src/: auth.rs  client.rs  main.rs  net.rs  user.rs
src/auth/: error.rs  mod.rs  user.rs
src/auth/client/: credentials.rs  mod.rs
src/client/: credentials.rs
