[package]
name = "gdrive-linux"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
axum = "0.5.7"
ctrlc = "3.2.2"
lazy_static = "1.4.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
tokio = { version = "1.19.2", features = ["full"] }
tracing = { version = "0.1.35", features = ["log"] }
tracing-subscriber = "0.3.11"
url-escape = "0.1.1"
urlencoding = "2.1.0"
warp = { version = "0.3.2", default-features = false }
