[package]
name = "gdrive-linux"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
axum = "0.5.7"
base64 = "0.13.0"
ctrlc = "3.2.2"
hex = "0.4.3"
lazy_static = "1.4.0"
open = "3.0.1"
parking_lot = "0.12.1"
rand = "0.8.5"
reqwest = { version = "0.11.11", features = ["json"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
sha2 = "0.10.2"
thiserror = "1.0.31"
tokio = { version = "1.19.2", features = ["full"] }
tracing = { version = "0.1.35", features = ["log"] }
tracing-subscriber = "0.3.11"
url-escape = "0.1.1"
urlencoding = "2.1.0"
warp = { version = "0.3.2", default-features = false }
